ves-parser/src/parser.rs
use crate::{
    ast::{self, Global, VarKind, AST},
    lexer::{self, Lexer, NextTokenExt, Token, TokenKind},
};
use std::{collections::HashSet, convert::Into};
use ves_error::{ErrCtx, FileId, Span, VesError, VesFileDatabase};

pub type ParseResult<T> = std::result::Result<T, VesError>;

// TODO: unify style and conventions in this file
// span_start, span_end
// do bounded constructs close themselves?
// -> e.g. blocks/param packs, do they consume the closing '}', ')'?
//    or is it up to the caller?

pub struct Parser<'a> {
    lexer: Lexer<'a>,
    previous: Token<'a>,
    current: Token<'a>,
    eof: Token<'a>,
    ex: ErrCtx,
    fid: FileId,
    scope_depth: usize,
    globals: HashSet<Global<'a>>,
    db: &'a VesFileDatabase<'a>,
}

impl<'a> Parser<'a> {
    pub fn new(lexer: Lexer<'a>, fid: FileId, db: &'a VesFileDatabase) -> Parser<'a> {
        let source = lexer.source();
        let end = if source.is_empty() {
            0
        } else {
            source.len() - 1
        };
        let eof = Token::new("", end..end, TokenKind::EOF);

        Parser {
            lexer,
            previous: eof.clone(),
            current: eof.clone(),
            eof,
            scope_depth: 0,
            globals: HashSet::new(),
            ex: ErrCtx::new(),
            fid,
            db,
        }
    }

    pub fn parse(mut self) -> Result<AST<'a>, ErrCtx> {
        self.advance();
        let mut body = vec![];
        while !self.at_end() {
            match self.stmt(true) {
                Ok(stmt) => body.push(stmt),
                Err(e) => {
                    self.ex.record(e);
                    self.synchronize();
                }
            }
        }

        if self.ex.had_error() {
            Err(self.ex)
        } else {
            Ok(AST::with_globals(body, self.globals, self.fid))
        }
    }

    fn stmt(&mut self, consume_semi: bool) -> ParseResult<ast::Stmt<'a>> {
        let label = if self.match_(&TokenKind::AtIdentifier) {
            let previous = self.previous.clone();
            self.consume(&TokenKind::Colon, "Expected a ':' after the label")?;
            Some(previous)
        } else {
            None
        };
        if label.is_some() && !self.check_any(&[TokenKind::Loop, TokenKind::For, TokenKind::While])
        {
            return Err(VesError::parse(
                "Only loops may be assigned a label",
                self.previous.span.clone(),
                self.fid,
            ));
        }

        if self.match_any(&[
            TokenKind::LeftBrace,
            TokenKind::Let,
            TokenKind::Mut,
            TokenKind::Print,
            TokenKind::Loop,
            TokenKind::For,
            TokenKind::While,
            TokenKind::Break,
            TokenKind::Continue,
            TokenKind::Defer,
            TokenKind::Return,
        ]) {
            // TODO: this
            match self.previous.kind {
                TokenKind::LeftBrace => self.block_stmt(),
                TokenKind::Let | TokenKind::Mut => self.var_decl(),
                TokenKind::Print => self.print_stmt(),
                TokenKind::Loop => self.loop_stmt(label),
                TokenKind::For => self.for_loop_stmt(label),
                TokenKind::While => self.while_loop_stmt(label),
                TokenKind::Break => self.break_or_continue_stmt(ast::StmtKind::Break),
                TokenKind::Continue => self.break_or_continue_stmt(ast::StmtKind::Continue),
                TokenKind::Defer => self.defer_stmt(),
                TokenKind::Return => self.return_stmt(),
                _ => unreachable!(),
            }
            .map(|res| {
                self.skip_semi();
                res
            })
        } else {
            self.expr_stmt(consume_semi)
        }
    }

    fn block_stmt(&mut self) -> ParseResult<ast::Stmt<'a>> {
        let span_start = self.previous.span.start;
        let body = self.block()?;
        let span_end = self.previous.span.end;
        Ok(ast::Stmt {
            kind: ast::StmtKind::Block(body),
            span: span_start..span_end,
        })
    }

    fn block(&mut self) -> ParseResult<Vec<ast::Stmt<'a>>> {
        self.scope_depth += 1;

        let mut body = vec![];
        // if the next token is a RightBrace, the block is empty
        if !self.check(&TokenKind::RightBrace) {
            while !self.at_end() && !self.check(&TokenKind::RightBrace) {
                match self.stmt(true) {
                    Ok(stmt) => body.push(stmt),
                    Err(e) => {
                        self.ex.record(e);
                        self.synchronize();
                    }
                }
            }
        }
        self.scope_depth -= 1;
        self.consume(&TokenKind::RightBrace, "Expected a '}' after a block")?;
        Ok(body)
    }

    fn var_decl(&mut self) -> ParseResult<ast::Stmt<'a>> {
        let span_start = self.previous.span.start;
        let kind = if self.previous.kind == TokenKind::Let {
            VarKind::Let
        } else {
            VarKind::Mut
        };
        let mut bindings = vec![self.binding_expression(kind)?];

        while self.match_(&TokenKind::Comma) {
            bindings.push(self.binding_expression(kind)?);
        }

        Ok(ast::Stmt {
            kind: ast::StmtKind::Var(bindings),
            span: span_start..self.previous.span.end,
        })
    }

    fn print_stmt(&mut self) -> ParseResult<ast::Stmt<'a>> {
        let start = self.previous.span.start;
        self.consume(&TokenKind::LeftParen, "Expected '('")?;
        let args = self.comma()?;
        self.consume(&TokenKind::RightParen, "Expected '('")?;
        Ok(ast::Stmt {
            kind: ast::StmtKind::Print(box args),
            span: start..self.previous.span.end,
        })
    }

    fn loop_stmt(&mut self, label: Option<Token<'a>>) -> ParseResult<ast::Stmt<'a>> {
        let span_start = self.previous.span.start;

        self.consume(
            &TokenKind::LeftBrace,
            "Expected a loop body after the keyword",
        )?;
        let body = self.block_stmt()?;

        let span_end = self.previous.span.end;
        Ok(ast::Stmt {
            kind: ast::StmtKind::Loop(box ast::Loop { body, label }),
            span: span_start..span_end,
        })
    }

    fn for_loop_stmt(&mut self, label: Option<Token<'a>>) -> ParseResult<ast::Stmt<'a>> {
        let span_start = self.previous.span.start;

        let (binding, binding_span) = if self.match_(&TokenKind::Identifier) {
            (Some(self.previous.clone()), self.previous.span.clone())
        } else {
            (None, self.current.span.clone())
        };

        if self.match_(&TokenKind::In) {
            let variable = binding
                .ok_or_else(|| VesError::parse("Expected identifier", binding_span, self.fid))?;
            // for-each
            let iter_start = self.current.span.start;
            let start = self.expr()?;
            let iterator = if self.match_(&TokenKind::Range) {
                let inclusive = self.previous.lexeme == "..=";
                let end = self.expr()?;
                let step = if self.match_(&TokenKind::Comma) {
                    self.expr()?
                } else {
                    literal!(
                        self,
                        ast::LitValue::Number(1f64),
                        Token::new("1", self.previous.span.clone(), TokenKind::Number)
                    )
                };
                let iter_end = self.previous.span.end;
                ast::Expr {
                    kind: ast::ExprKind::Range(box ast::Range {
                        start,
                        end,
                        step,
                        inclusive,
                    }),
                    span: iter_start..iter_end,
                }
            } else {
                start
            };
            self.consume(&TokenKind::LeftBrace, "Expected loop body")?;
            let body = self.block_stmt()?;
            let span_end = self.previous.span.end;
            Ok(ast::Stmt {
                kind: ast::StmtKind::ForEach(box ast::ForEach {
                    variable,
                    iterator,
                    body,
                    label,
                }),
                span: span_start..span_end,
            })
        } else {
            let mut initializers = vec![];
            // since we already (maybe) parsed one binding identifier,
            // only continue if it actually exists
            if let Some(binding) = binding {
                if self.match_(&TokenKind::Equal) {
                    let name = binding;
                    let value = self.expr()?;
                    initializers.push(ast::Assignment { name, value });
                }
                while self.match_(&TokenKind::Comma) {
                    let name = self.consume(&TokenKind::Identifier, "Expected an identifier")?;
                    self.consume(&TokenKind::Equal, "Expected '=' in binding")?;
                    let value = self.expr()?;
                    initializers.push(ast::Assignment { name, value });
                }
            }
            self.consume(&TokenKind::Semi, "Expected ';'")?;
            let condition = if !self.check(&TokenKind::Semi) {
                Some(self.expr()?)
            } else {
                None
            };
            self.consume(&TokenKind::Semi, "Expected ';'")?;
            let increment = if !self.check(&TokenKind::LeftBrace) {
                Some(self.expr()?)
            } else {
                None
            };
            self.consume(&TokenKind::LeftBrace, "Expected loop body")?;
            let body = self.block_stmt()?;
            let span_end = self.previous.span.end;
            Ok(ast::Stmt {
                kind: ast::StmtKind::For(box ast::For {
                    initializers,
                    condition,
                    increment,
                    body,
                    label,
                }),
                span: span_start..span_end,
            })
        }
    }

    fn while_loop_stmt(&mut self, label: Option<Token<'a>>) -> ParseResult<ast::Stmt<'a>> {
        let span_start = self.previous.span.start;
        let condition = self.condition()?;
        self.consume(&TokenKind::LeftBrace, "Expected loop body")?;
        let body = self.block_stmt()?;
        let span_end = self.previous.span.end;
        Ok(ast::Stmt {
            kind: ast::StmtKind::While(box ast::While {
                condition,
                body,
                label,
            }),
            span: span_start..span_end,
        })
    }

    fn break_or_continue_stmt<F>(&mut self, constructor: F) -> ParseResult<ast::Stmt<'a>>
    where
        F: Fn(Option<Token<'a>>) -> ast::StmtKind,
    {
        let start = self.previous.span.start;
        let label = if self.match_(&TokenKind::AtIdentifier) {
            Some(self.previous.clone())
        } else {
            None
        };

        Ok(ast::Stmt {
            kind: constructor(label),
            span: start..self.previous.span.end,
        })
    }

    fn defer_stmt(&mut self) -> ParseResult<ast::Stmt<'a>> {
        let span_start = self.previous.span.start;
        let expr = if self.match_(&TokenKind::LeftBrace) {
            let body_start = self.previous.span.start;
            let body = self.block()?;
            let body_end = self.previous.span.end;
            let body_span = body_start..body_end;
            let (line, column) = self.db.location(self.fid, &body_span);
            let name = Token::new(
                format!("[defer@{}:{}]", line, column),
                self.previous.span.clone(),
                TokenKind::Identifier,
            );
            ast::Expr {
                kind: ast::ExprKind::Call(box ast::Call {
                    callee: box ast::Expr {
                        kind: ast::ExprKind::Fn(box ast::FnInfo {
                            name,
                            params: ast::Params::default(),
                            body,
                            kind: ast::FnKind::Function,
                        }),
                        span: body_span.clone(),
                    },
                    args: vec![],
                    tco: false,
                    rest: false,
                }),
                span: body_span,
            }
        } else {
            self.call()?
        };
        let span_end = self.previous.span.end;
        Ok(ast::Stmt {
            kind: ast::StmtKind::Defer(box expr),
            span: span_start..span_end,
        })
    }

    fn return_stmt(&mut self) -> ParseResult<ast::Stmt<'a>> {
        let span_start = self.previous.span.start;
        let expr = if !self.match_(&TokenKind::Semi) && !self.check(&TokenKind::RightBrace) {
            Some(box self.expr()?)
        } else {
            None
        };
        let span_end = self.previous.span.end;
        Ok(ast::Stmt {
            kind: ast::StmtKind::Return(expr),
            span: span_start..span_end,
        })
    }

    fn binding_expression(&mut self, kind: VarKind) -> ParseResult<ast::Var<'a>> {
        let ident = self.consume(
            &TokenKind::Identifier,
            "Expected a variable name after the keyword or comma",
        );

        let init = if self.match_(&TokenKind::Equal) {
            let ident = ident.clone();
            Some(self.expr().map_err(|e| {
                let _ = ident.map_err(|e| self.ex.record(e));
                e
            })?)
        } else {
            None
        };

        let ident = ident?;
        if kind == VarKind::Let && init.is_none() {
            self.ex.record(VesError::let_without_value(
                format!(
                    "Immutable variable `{}` must be initialized at declaration",
                    ident.lexeme
                ),
                ident.span.clone(),
                self.fid,
            ));
        }

        Ok(ast::Var {
            kind,
            name: ident,
            initializer: init,
        })
    }

    fn expr_stmt(&mut self, consume_semi: bool) -> ParseResult<ast::Stmt<'a>> {
        let span_start = self.previous.span.start;
        let expr = self.comma()?;
        let span_end = self.current.span.end;

        if consume_semi {
            self.skip_semi();
        }

        Ok(ast::Stmt {
            kind: ast::StmtKind::ExprStmt(Box::new(expr)),
            span: span_start..span_end,
        })
    }

    fn comma(&mut self) -> ParseResult<ast::Expr<'a>> {
        let span_start = self.previous.span.start;
        let mut exprs = vec![self.expr()?];
        while self.match_(&TokenKind::Comma) {
            exprs.push(self.expr()?);
        }
        let span_end = self.current.span.end;

        if exprs.len() == 1 {
            Ok(exprs.pop().unwrap())
        } else {
            Ok(ast::Expr {
                kind: ast::ExprKind::Comma(exprs),
                span: span_start..span_end,
            })
        }
    }

    fn spread_expr(&mut self) -> ParseResult<ast::Expr<'a>> {
        if self.match_(&TokenKind::Ellipsis) {
            let span_start = self.previous.span.start;
            Ok(ast::Expr {
                kind: ast::ExprKind::Spread(box self.expr()?),
                span: span_start..self.previous.span.start,
            })
        } else {
            self.expr()
        }
    }

    fn expr(&mut self) -> ParseResult<ast::Expr<'a>> {
        if self.match_any(&[
            TokenKind::Struct,
            TokenKind::Fn,
            TokenKind::If,
            TokenKind::Do,
        ]) {
            match self.previous.kind {
                TokenKind::Struct => self.struct_decl(),
                TokenKind::Fn => self.fn_decl_expr(),
                TokenKind::If => self.if_expr(),
                TokenKind::Do => self.do_block_expr(),
                _ => unreachable!(),
            }
        } else {
            self.assignment()
        }
    }

    fn struct_decl(&mut self) -> ParseResult<ast::Expr<'a>> {
        let span_start = self.previous.span.start;
        // parse struct name, or generate it
        let struct_name = if self.match_(&TokenKind::Identifier) {
            self.previous.clone()
        } else {
            let (line, column) = self.db.location(self.fid, &self.previous.span);
            Token::new(
                format!("[struct@{}:{}]", line, column),
                self.previous.span.clone(),
                TokenKind::Identifier,
            )
        };
        // parse fields
        let fields = if self.match_(&TokenKind::LeftParen) {
            let fields = self.param_pack(false, false)?;
            self.consume(&TokenKind::RightParen, "Expected a closing `)`")?;
            Some(fields)
        } else {
            None
        };

        // parse struct body
        let mut methods = vec![];
        let mut r#static = ast::StructStaticProps {
            fields: vec![],
            methods: vec![],
        };
        let mut initializer = None;
        // if we come across a semi or don't come across a left brace,
        // then the struct has no body
        if !self.match_(&TokenKind::Semi) && self.match_(&TokenKind::LeftBrace) {
            while !self.match_(&TokenKind::RightBrace) {
                let prop_name = self
                    .consume(
                        &TokenKind::Identifier,
                        "Expected a method, static field or static method declaration",
                    )
                    .map_err(|mut e| {
                        if self.current.kind == TokenKind::Fn {
                            e.kind = ves_error::VesErrorKind::FnBeforeMethod;
                            e.msg =
                                "Instance and static methods do not require `fn` to be declared"
                                    .into();
                        }
                        e
                    })?;

                if prop_name.lexeme == "init" {
                    // this must be an initializer
                    if initializer.is_some() {
                        return Err(VesError::parse(
                            "Cannot have more than one initializer",
                            self.previous.span.clone(),
                            self.fid,
                        ));
                    }
                    let body = self.fn_decl_body()?;
                    initializer = Some(ast::Initializer::new(ast::FnInfo {
                        name: prop_name,
                        params: ast::Params::default(),
                        body,
                        kind: ast::FnKind::Method,
                    }));
                } else if self.match_(&TokenKind::LeftParen) {
                    // this is a method
                    let params = self.param_pack(true, true)?;
                    self.consume(&TokenKind::RightParen, "Expected a closing `)`")?;
                    let body = self.fn_decl_body()?;
                    if params.is_instance_method_params() {
                        methods.push(ast::FnInfo {
                            name: prop_name,
                            params,
                            body,
                            kind: ast::FnKind::Method,
                        });
                    } else {
                        r#static.methods.push(ast::FnInfo {
                            name: prop_name,
                            params,
                            body,
                            kind: ast::FnKind::Static,
                        });
                    }
                } else {
                    // this is a static field
                    let value = if self.match_(&TokenKind::Equal) {
                        Some(self.expr()?)
                    } else {
                        None
                    };
                    r#static.fields.push((prop_name, value));
                }
            }
        }
        let span_end = self.previous.span.end;
        Ok(ast::Expr {
            kind: ast::ExprKind::Struct(box ast::StructInfo {
                name: struct_name,
                fields,
                methods,
                initializer,
                r#static,
            }),
            span: span_start..span_end,
        })
    }

    fn fn_decl_expr(&mut self) -> ParseResult<ast::Expr<'a>> {
        let span_start = self.previous.span.start;
        let decl = self.fn_decl()?;
        let span_end = self.previous.span.end;
        Ok(ast::Expr {
            kind: ast::ExprKind::Fn(box decl),
            span: span_start..span_end,
        })
    }

    fn fn_decl(&mut self) -> ParseResult<ast::FnInfo<'a>> {
        let name = if self.match_(&TokenKind::Identifier) {
            remember_if_global!(self, self.previous, ast::VarKind::Let);
            self.previous.clone()
        } else {
            let (line, column) = self.db.location(self.fid, &self.previous.span);
            Token::new(
                format!("[fn@{}:{}]", line, column),
                self.previous.span.clone(),
                TokenKind::Identifier,
            )
        };

        self.consume(
            &TokenKind::LeftParen,
            "Expected an opening `(` after the function name or keyword",
        )?;
        let params = self.param_pack(true, false)?;
        self.consume(&TokenKind::RightParen, "Expected a closing `)`")?;
        let body = self.fn_decl_body()?;
        Ok(ast::FnInfo {
            name,
            params,
            body,
            kind: ast::FnKind::Function,
        })
    }

    fn fn_decl_body(&mut self) -> ParseResult<Vec<ast::Stmt<'a>>> {
        if self.match_(&TokenKind::Arrow) {
            let body_span_start = self.previous.span.start;
            let expr = self.expr()?;
            Ok(vec![ast::Stmt {
                span: body_span_start..expr.span.end,
                kind: ast::StmtKind::Return(Some(box expr)),
            }])
        } else if self.match_(&TokenKind::LeftBrace) {
            Ok(self.block()?)
        } else {
            Err(VesError::parse(
                "Expected a function body",
                self.previous.span.clone(),
                self.fid,
            ))
        }
    }

    fn param_pack(&mut self, rest_args: bool, in_method: bool) -> ParseResult<ast::Params<'a>> {
        let mut parsing_default = false;
        let mut positional = vec![];
        let mut default = vec![];
        let mut rest = None;
        while !self.check(&TokenKind::RightParen) {
            if self.match_(&TokenKind::Ellipsis) {
                if !rest_args {
                    return Err(VesError::parse(
                        "Rest arguments are not allowed here",
                        self.previous.span.clone(),
                        self.fid,
                    ));
                }
                // rest argument
                let name = self.consume(&TokenKind::Identifier, "Expected a parameter name")?;
                rest = Some(name);
                break;
            } else {
                // positional or default argument
                let name = self.consume_any(
                    &[TokenKind::Identifier, TokenKind::Self_],
                    "Expected a parameter name",
                )?;
                let value = if self.match_(&TokenKind::Equal) {
                    if in_method && name.lexeme == "self" {
                        return Err(VesError::parse(
                            "'self' may not have a default value",
                            self.previous.span.clone(),
                            self.fid,
                        ));
                    }
                    Some(self.expr()?)
                } else {
                    None
                };
                match value {
                    Some(value) => {
                        parsing_default = true;
                        default.push((name, value));
                    }
                    None => {
                        if parsing_default {
                            return Err(VesError::parse(
                                    "Positional arguments may not appear after arguments with default values",
                                    self.previous.span.clone(),
                                    self.fid,
                                ));
                        }
                        positional.push(name);
                    }
                }
            }
            if !self.match_(&TokenKind::Comma) {
                break;
            }
        }
        // consume trailing comma
        self.match_(&TokenKind::Comma);
        if !self.check(&TokenKind::RightParen) {
            // if we get here, it means we're not at the end of the param list
            if rest.is_some() {
                return Err(VesError::parse(
                    "Rest parameter must appear last in parameter list",
                    self.previous.span.clone(),
                    self.fid,
                ));
            }
        }
        Ok(ast::Params {
            positional,
            default,
            rest,
        })
    }

    fn if_expr(&mut self) -> ParseResult<ast::Expr<'a>> {
        let span_start = self.previous.span.start;
        let condition = self.condition()?;
        let then = self.do_block()?;
        let mut otherwise = None;
        if self.match_(&TokenKind::Else) {
            if self.match_(&TokenKind::If) {
                // `else if`
                let nested = self.if_expr()?;
                otherwise = Some(ast::DoBlock {
                    statements: vec![],
                    value: Some(nested),
                });
            } else {
                // `else`
                otherwise = Some(self.do_block()?);
            }
        }
        let span_end = self.previous.span.end;
        Ok(ast::Expr {
            span: span_start..span_end,
            kind: ast::ExprKind::If(box ast::If {
                condition,
                then,
                otherwise,
            }),
        })
    }

    fn condition(&mut self) -> ParseResult<ast::Condition<'a>> {
        if self.match_any(&[TokenKind::Ok, TokenKind::Err]) {
            let which = self.previous.clone();
            self.consume(&TokenKind::LeftParen, "Expected '('")?;
            let ident = self.consume(&TokenKind::Identifier, "Expected identifier")?;
            self.consume(&TokenKind::RightParen, "Expected ')'")?;
            self.consume(&TokenKind::Equal, "Expected assignment")?;
            let value = self.expr()?;
            Ok(ast::Condition {
                value,
                pattern: match which.kind {
                    TokenKind::Ok => ast::ConditionPattern::IsOk(ident),
                    TokenKind::Err => ast::ConditionPattern::IsErr(ident),
                    _ => unreachable!(),
                },
            })
            // destructuring
        } else {
            let value = self.expr()?;
            Ok(ast::Condition {
                value,
                pattern: ast::ConditionPattern::Value,
            })
        }
    }

    fn do_block_expr(&mut self) -> ParseResult<ast::Expr<'a>> {
        let span_start = self.previous.span.start;
        let inner = self.do_block()?;
        let span_end = self.previous.span.end;
        Ok(ast::Expr {
            span: span_start..span_end,
            kind: ast::ExprKind::DoBlock(box inner),
        })
    }

    fn do_block(&mut self) -> ParseResult<ast::DoBlock<'a>> {
        // the value of the block is the last expression statement,
        // but only if it is not terminated by a semicolon.
        // in any other case the value is `none`

        self.consume(&TokenKind::LeftBrace, "Expected an opening `{`")?;
        self.scope_depth += 1;

        let mut body = vec![];
        let mut last_stmt_had_semi = false;
        // if the next token is a RightBrace, the block is empty
        if !self.check(&TokenKind::RightBrace) {
            while !self.at_end() && !self.check(&TokenKind::RightBrace) {
                // `false` means the statements don't consume their semicolons.
                match self.stmt(false) {
                    Ok(stmt) => {
                        body.push(stmt);
                        last_stmt_had_semi = self.match_(&TokenKind::Semi);
                    }
                    Err(e) => {
                        self.ex.record(e);
                        self.synchronize();
                    }
                }
            }
        }

        self.scope_depth -= 1;
        self.consume(&TokenKind::RightBrace, "Expected '}' after a block")?;

        // if the last statement was not terminated by a semicolon,
        // and it's an expression, then that's the value.
        let mut value = None;
        if !last_stmt_had_semi {
            if let Some(last_stmt) = body.pop() {
                if let ast::StmtKind::ExprStmt(expr) = last_stmt.kind {
                    value = Some(*expr);
                } else {
                    // since we pop the last statement, we have to push it back
                    // if it isn't an expression.
                    body.push(last_stmt);
                }
            }
        };

        Ok(ast::DoBlock {
            statements: body,
            value,
        })
    }

    fn assignment(&mut self) -> ParseResult<ast::Expr<'a>> {
        let expr = self.or()?;
        if self.match_any(&[
            TokenKind::Equal,
            TokenKind::OrEqual,
            TokenKind::AndEqual,
            TokenKind::PlusEqual,
            TokenKind::MinusEqual,
            TokenKind::StarEqual,
            TokenKind::SlashEqual,
            TokenKind::PowerEqual,
            TokenKind::PercentEqual,
        ]) {
            let operator = self.previous.clone();
            let span_start = self.previous.span.start;
            return Ok(match expr.kind {
                // x = <expr>
                ast::ExprKind::Variable(ref token) => ast::Expr {
                    kind: ast::ExprKind::Assignment(box ast::Assignment {
                        name: token.clone(),
                        value: desugar_assignment(operator, expr.clone(), self.expr()?),
                    }),
                    span: span_start..self.current.span.end,
                },
                // x[<expr>] = <expr>
                ast::ExprKind::GetItem(ref get)
                    if check_assignment_target(&get.node, false).is_valid() =>
                {
                    ast::Expr {
                        kind: ast::ExprKind::SetItem(box ast::SetItem {
                            node: get.node.clone(),
                            key: get.key.clone(),
                            value: desugar_assignment(operator, expr.clone(), self.expr()?),
                        }),
                        span: span_start..self.current.span.end,
                    }
                }
                // x.key = <expr>
                // except x?.key = <expr>
                ast::ExprKind::GetProp(ref get)
                    if !get.is_optional && check_assignment_target(&get.node, false).is_valid() =>
                {
                    ast::Expr {
                        kind: ast::ExprKind::SetProp(box ast::SetProp {
                            node: get.node.clone(),
                            field: get.field.clone(),
                            value: desugar_assignment(operator, expr.clone(), self.expr()?),
                        }),
                        span: span_start..self.current.span.end,
                    }
                }
                _ => {
                    // TODO: do not run this twice
                    // NOTE(moscow): I don't think checking it multiple times is a problem,
                    // because a really deep property/item access is only like 3-4 nodes
                    let kind = check_assignment_target(&expr, false);
                    return Err(self.invalid_assignment_error(kind, expr.span));
                }
            });
        }
        Ok(expr)
    }

    fn or(&mut self) -> ParseResult<ast::Expr<'a>> {
        let mut expr = self.and()?;
        // expr || expr
        while self.match_(&TokenKind::Or) {
            expr = binary!(expr, Or, self.and()?);
        }
        Ok(expr)
    }

    fn and(&mut self) -> ParseResult<ast::Expr<'a>> {
        let mut expr = self.equality()?;
        // expr && expr
        while self.match_(&TokenKind::And) {
            expr = binary!(expr, And, self.equality()?);
        }
        Ok(expr)
    }

    fn equality(&mut self) -> ParseResult<ast::Expr<'a>> {
        let mut expr = self.comparison()?;
        // expr != expr
        // expr == expr
        while self.match_any(&[TokenKind::BangEqual, TokenKind::EqualEqual]) {
            expr = match self.previous.kind {
                TokenKind::EqualEqual => binary!(expr, Eq, self.comparison()?),
                TokenKind::BangEqual => binary!(expr, Ne, self.comparison()?),
                _ => unreachable!(),
            };
        }
        Ok(expr)
    }

    fn comparison(&mut self) -> ParseResult<ast::Expr<'a>> {
        let mut expr = self.term()?;
        // expr > expr
        // expr < expr
        // expr >= expr
        // expr <= expr
        // expr in expr
        // expr is expr
        while self.match_any(&[
            TokenKind::More,
            TokenKind::Less,
            TokenKind::MoreEqual,
            TokenKind::LessEqual,
            TokenKind::In,
            TokenKind::Is,
        ]) {
            expr = match self.previous.kind {
                TokenKind::More => binary!(expr, Gt, self.comparison()?),
                TokenKind::Less => binary!(expr, Lt, self.comparison()?),
                TokenKind::MoreEqual => binary!(expr, Ge, self.comparison()?),
                TokenKind::LessEqual => binary!(expr, Le, self.comparison()?),
                TokenKind::In => binary!(expr, In, self.comparison()?),
                TokenKind::Is => binary!(expr, Is, self.comparison()?),
                _ => unreachable!(),
            };
        }
        Ok(expr)
    }

    fn term(&mut self) -> ParseResult<ast::Expr<'a>> {
        let mut expr = self.factor()?;
        // expr - expr
        // expr + expr
        while self.match_any(&[TokenKind::Minus, TokenKind::Plus]) {
            expr = match self.previous.kind {
                TokenKind::Minus => binary!(expr, Sub, self.factor()?),
                TokenKind::Plus => binary!(expr, Add, self.factor()?),
                _ => unreachable!(),
            };
        }
        Ok(expr)
    }

    fn factor(&mut self) -> ParseResult<ast::Expr<'a>> {
        let mut expr = self.power()?;
        // expr * expr
        // expr / expr
        while self.match_any(&[TokenKind::Star, TokenKind::Slash]) {
            expr = match self.previous.kind {
                TokenKind::Star => binary!(expr, Mul, self.power()?),
                TokenKind::Slash => binary!(expr, Div, self.power()?),
                _ => unreachable!(),
            }
        }
        Ok(expr)
    }

    fn power(&mut self) -> ParseResult<ast::Expr<'a>> {
        let mut expr = self.unary()?;
        // expr ** expr
        while self.match_(&TokenKind::Power) {
            expr = binary!(expr, Pow, self.power()?);
        }
        Ok(expr)
    }

    fn invalid_assignment_error(&mut self, kind: AssignmentKind, span: Span) -> VesError {
        match kind {
            AssignmentKind::Invalid => VesError::parse(
                "Invalid assignment target. Only variables, struct.fields, and item[accesses] may be assigned to.",
                span,
                self.fid,
            ),
            AssignmentKind::OptionalAccess => VesError::new(
                "Cannot assign to an optional field access. Consider performing the assignment in an `if` block.",
                span,
                ves_error::VesErrorKind::OptionalAccessAssignment,
                self.fid,
            ),
            AssignmentKind::Valid => unreachable!(),
        }
    }
